<resources>

    <string name="loginButtonName">Zaloguj się</string>
    <string name="registerButtonName">Zarejestruj się</string>
    <string name="loginInputHint">Podaj swój login bądz email</string>
    <string name="passwordInputHint">Podaj hasło</string>
    <string name="forgetPasswordName">Zapomniałeś hasła bądź loginu?</string>
    <string name="quitApplicationButtonName">Wyjdź z aplikacji</string>
    <string name="registerLoginReceive">Podaj login do rejestracji badz adres email</string>
    <string name="registerPasswordReceive">Podaj hasło do nowego konta</string>
    <string name="registerButtonReceive">Zarejestruj się</string>
    <string name="registerButtonBackReceive">Wróć</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- DataBase -->
    <string name="create_database">CREATE TABLE IF NOT EXISTS quests(
                                    _id INTEGER primary key autoincrement,
                                    description VARCHAR not null,
                                    quest_date DATETIME,
                                    alarm_date DATETIME,
                                    quest_place VARCHAR,
                                    type VARCHAR,
                                    comments VARCHAR);
                                    CREATE TABLE IF NOT EXISTS user(
                                    _id INTEGER primary key autoincrement,
                                    login VARCHAR,
                                    pass VARCHAR,
                                    name VARCHAR,
                                    surname VARCHAR);</string>
    <string name="database_name">Timeger.db</string>


    <!-- Kolory tla-->
    <color name="blockBackground">#ED7200</color>
    <color name="parentBackground">#200F00</color>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- Startup Screen -->
    <string name="app_name">Timeger</string>
    <string name="desciptionPartOne">Zaoszczędź czas</string>
    <string name="descriptionPartTwo">BE AWESOME!</string>
    <string name="loginButton">Zaloguj się</string>
    <string name="registerButton">Zarejestruj się</string>
</resources>
